zero-trust-fastapi-demo/k8s/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  labels:
    app: client
spec:
  containers:
    - name: client
      image: curlimages/curl:8.5.0
      command: ["sleep", "36000"]
