zero-trust-fastapi-demo/k8s/demo-clients.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-client
  namespace: zt-demo
  labels:
    app: demo-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-client
  template:
    metadata:
      labels:
        app: demo-client
    spec:
      serviceAccountName: demo-client
      containers:
        - name: python
          image: python:3.12-slim
          command: ["sleep", "36000"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-client
  namespace: zt-demo
  labels:
    app: bad-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bad-client
  template:
    metadata:
      labels:
        app: bad-client
    spec:
      serviceAccountName: bad-client
      containers:
        - name: python
          image: python:3.12-slim
          command: ["sleep", "36000"]
