zero-trust-fastapi-demo/k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: zt-demo
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      serviceAccountName: auth-service
      containers:
        - name: auth-service
          image: auth-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: zt-demo
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 9000
      targetPort: http
